--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,5 +1,15 @@
-svg{
+svg {
     width: 40px;
     height: 40px;
     margin-right: 12px;
+    animation: svgAnimation 5s linear infinite;
+}
+
+@keyframes svgAnimation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
